# Predicti-on-Market-Research

./: .gitignore  README.md  README_STAGE2.md  README_STAGE3.md  README_STAGE4.md  README_STAGE5.md  README_STAGE6.md  README_STAGE7.md  pyproject.toml  requirements-figures.txt  requirements.txt  stage4_requirements.txt
config/: media_sources.csv  media_sources_independent_ap_supplement.csv  media_sources_independent_ap_supplement_2.csv  media_sources_independent_extra.csv  media_sources_kalshi_archive.csv  media_sources_kalshi_archive_45.csv  media_sources_partner_cnn.csv  media_sources_regulatory_extra.csv  media_sources_regulatory_supplement.csv  media_sources_regulatory_supplement_2.csv  source_type_rules.yaml  stage1_construct_schema.json  stage2.yaml  stage3.yaml  stage3_annotation_schema.json  stage4.yaml  stage4_model_registry.csv  stage5.yaml  stage6.yaml  stage7.yaml
docs/: REPRODUCE.md  analysis_plan.md  codebook.md  constructs_and_hypotheses.md  corpus_protocol.md  data_collection_notes.md  data_dictionary.md  literature_map.md  qa_report.json  research_design.md  runbook_stage2.md  runbook_stage3.md  runbook_stage4.md  runbook_stage5.md  runbook_stage6.md  runbook_stage7.md  sampling_and_analysis_plan.md  source_verification_ledger.md  stage1_audit.md  stage2_acceptance.md  stage2_qa_report.json  stage3_acceptance.md  stage3_codebook.md  stage3_qa_report.json  stage3_sampling_and_analysis_plan.md  stage4_acceptance.md  stage4_analysis_plan.md  stage4_claim_policy.md  stage5_acceptance.md  stage5_claim_and_citation_policy.md  stage5_manuscript_plan.md  (+4 more)
(+150 files in other folders)
